2008-08-21  Evi Vanoost <vanooste@rcbi.rochester.edu>

	* index.php: Update HTML for unclosed tags and put everything in PHP
	Updated the HTTPS detection. Made sure the password doesn't get
	passed to other scripts (like 'evil' plugins)

	* include/functions_html.php: Added print_input_password_extended()

	* general/main_menu.php: Removed old code and header

	* general/login_page.php: Tried putting it in functions_html code but
	that didn't work (rowspan), so I just ended up with a smaller file and
	the input boxes getting printed

	* general/header.php: Updated to use functions_html

	* general/footer.php: Updated header and develop_bypass for the query
	counter


2008-08-21  Sancho Lerena <slerena@gmail.com>

	* pandoradb*.sql: tplanned_downtime: Fixed a typo, changed timestamp 
	types, added executed field and removed id_agent_module.

	* manage_config.php:  (Problem copying keep_alive modules
	and alerts and solved bad message with no data supplied.

	* manage_config_remote.php: Solved BUG #2042788 Fixed, was missing 
	extension in filename check.

	* planned_downtime.php: Major rewrite. Now works with server model of
	planned downtimes based on select agents to disable in specific times.
	Using unixtime was a very nice idea, so the javascript controls are 
	fantastic to do this job!. Thanks Esteban and Evi!.

	* manage_recontask*: Some issues with styles, using new div for button.

	* modificar_server.php:  Some issues with styles, using new div for button

	* config.inc.php: By default, show errors, easy to debug first problems.

	* functions_db.php: Fixed problems detected in borrar_incidencia() function
	(this is delete_incident in spanish).

	* estado_agente.php: Added support to search by IP address in agent view.

	* networkmap.php: Regen on by default, Font label shortened.
	
2008-08-21  Esteban Sanchez <estebans@artica.es>

	* general/pandora_help.php: Added a require of a functions file. Added
	missing HTML tags.
